--- a/redsheet-portal/src/app/components/dashboard/message-users/message-users/message-users.component.html
+++ b/redsheet-portal/src/app/components/dashboard/message-users/message-users/message-users.component.html
@@ -1,5 +1,4 @@
-<div class="row modal-center">
-  <div class="col-12">
+<div class="modal-center">
     <div class="modal-dialog modal-md" role="document">
       <div class="modal-content p-2 p-sm-4">
           <div class="modal-header mb-0 border-0">
@@ -9,13 +8,15 @@
             <p class="text-muted">Select Users(s) to message</p>
           </div>
           <div class="modal-body">
-            <li class="my-1" *ngFor="let user of users; index as i" type="none">
-              <label *ngIf="user.userId!=data.userId" class="custom-control custom-checkbox">
-                <input class="custom-control-input checkbox-icon" type="checkbox" (change)="AddRemoveRecipents($event,user.email)">
-                <span class="custom-control-indicator"></span>
-                <span>{{user.userName}} - {{user.email}}</span>
-            </label>
-            </li>
+            <ul class="m-0 p-0" type="none">
+              <li class="my-1" *ngFor="let user of users; index as i" type="none">
+                <label *ngIf="user.userId!=data.userId" class="custom-control custom-checkbox">
+                  <input class="custom-control-input checkbox-icon" type="checkbox" (change)="AddRemoveRecipents($event,user.email)">
+                  <span class="custom-control-indicator"></span>
+                  <span>{{user.userName}} - {{user.email}}</span>
+              </label>
+              </li>
+            </ul>
             <p class="mt-3 mb-0 text-muted">Message</p>
             <textarea  class="form-control" placeholder="Type message here.." [(ngModel)]="message"></textarea>
             <div class="m-0 py-3 p-0">
@@ -26,11 +27,12 @@
             </label>
             </div>
           </div>
-        <div class="modal-footer border-0 row justify-content-around align-items-center">
-            <button type="button" class="m-0 px-5 py-0 btn btn-info btn-md" (click)="Cancel()"><p class="mx-2 my-0 p-2 ">Cancel</p></button>
-            <button class="m-0 px-5 py-0 btn btn-primary btn-md " [disabled]="MessageObject.EmailTo.length<=0 || message.length<=0" (click)="SendMessage()"><p class="mx-2 my-0 p-2">Send Message</p></button> <!-- (click)="SendMessage()" [disabled]="message.length<=0" -->
+        <div class="modal-footer border-0 px-2 row justify-content-around align-items-center">
+            <button class="container-fluid col-5 btn btn-info btn-md text-center" (click)="Cancel()">Cancel</button>
+            <button class="container-fluid col-5 btn btn-primary btn-md text-center" [disabled]="MessageObject.EmailTo.length<=0 || message.length<=0" (click)="SendMessage()">Send Message</button>
+          
+ <!-- (click)="SendMessage()" [disabled]="message.length<=0" -->
         </div>
       </div>
     </div>
   </div>
-</div>
