--- a/redsheet-portal/src/app/components/idle-session-timer/idle-session-timer.component.html
+++ b/redsheet-portal/src/app/components/idle-session-timer/idle-session-timer.component.html
@@ -1,5 +1,4 @@
-<div class="row modal-center">
-  <div class="col-12">
+<div class="modal-center">
     <div class="modal-dialog modal-lg" role="document" *ngIf="showComponent">
       <div class="modal-content p-2 p-sm-4">
            <div class="modal-header border-0">
@@ -18,6 +17,4 @@
         </div>
       </div>
     </div>
-    
-  </div>
 </div>
