Uttam : development : 31-05 with superuser permission for company and publish ready

--- a/redsheet-portal/src/app/components/dashboard/message-users/message-users/message-users.component.html
+++ b/redsheet-portal/src/app/components/dashboard/message-users/message-users/message-users.component.html
@@ -13,7 +13,9 @@
                 <label *ngIf="user.userId!=data.userId" class="custom-control custom-checkbox">
                   <input class="custom-control-input checkbox-icon" type="checkbox" (change)="AddRemoveRecipents($event,user.email)">
                   <span class="custom-control-indicator"></span>
-                  <span>{{user.userName}} - {{user.email}}</span>
+                  <span>
+                    <p class="text-overflow-adjust">{{user.userName}} - {{user.email}}</p>
+                  </span>
               </label>
               </li>
             </ul>
