--- a/redsheet-portal/src/app/components/project-module/project-modules/ModuleHelp/detail/project-module-help-detail.component.html
+++ b/redsheet-portal/src/app/components/project-module/project-modules/ModuleHelp/detail/project-module-help-detail.component.html
@@ -1,4 +1,5 @@
-<div class="modal-dialog modal-lg" role="document" *ngIf="showComponent">
+<div class="modal-center">
+  <div class="modal-dialog modal-lg" role="document" *ngIf="showComponent">
     <div class="modal-content p-2 p-sm-4">
          <div class="modal-header border-0">
             <h2 class="modal-title">Help</h2>
@@ -13,4 +14,5 @@
         <button type="button" name="ok" class="btn btn-primary btn-md" (click)="hideProjectModuleHelpDetailComponent()" data-dismiss="modal">OK</button>
       </div>
     </div>
+</div>
 </div>
