--- a/redsheet-portal/src/app/components/start/app.component.html
+++ b/redsheet-portal/src/app/components/start/app.component.html
@@ -17,3 +17,25 @@
     <app-footer-bar *ngIf="showElement"></app-footer-bar>
   </div>
 </div>
+
+<!--  -->
+<div id="session" class="modal" [ngClass]="{'idle-session-modal':isSessionEnable,'modal-center':isSessionEnable}">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content p-2 p-sm-4">
+         <div class="modal-header border-0">
+            <h2 class="modal-title">Session</h2>
+          </div>
+      <div class="modal-body">
+            <div>
+              <p>It's a gentle reminder your session about to expire</p>
+              <h3 *ngIf="SessionTime>0">remaining time {{SessionTime}}s</h3>
+              <h3 *ngIf="SessionTime<=0">Signing Out</h3>
+            </div>
+      </div>
+      <div class="modal-footer border-0">
+        <button class="btn btn-success" (click)="ExpandSession()" >Extend</button>
+        <button class="btn btn-danger" (click)="logOut()">Sign Out</button>
+      </div>
+    </div>
+  </div>
+</div>
