--- a/redsheet-portal/src/assets/css/custom.css
+++ b/redsheet-portal/src/assets/css/custom.css
@@ -2694,3 +2694,14 @@ header .custom-list.header-info-dropdown{
 .modal-center::-webkit-scrollbar {
   display: none;
 }
+
+.idle-session-modal{
+  background-color:rgba(82, 79, 79, 0.699);
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  right: 0;
+  position: fixed;
+  z-index: 3000;
+}
+
